[package]
name = "time_travel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", features = ["dynamic"] }
bevy-inspector-egui = "0.14.0"
bevy_rapier2d = "0.19.0"
bevy_prototype_lyon = "0.7.1"